--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,28 +1,7 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+* {box-sizing: border-box;}
+body { padding: 0; margin: 0;}
+a {color: inherit;text-decoration: none;}
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
 
-* {
-  box-sizing: border-box;
-}
 /* ----------------------------------------------------- */
-.sidebar {
-  width: 120px;
-  height: 60vh;
-  background: grey !important;
-  position: fixed;
-  left: 0;
-  z-index: 1;
-  margin-top: 200px;
-  
- 
-}
+.sidebar {width: 120px; height: 60vh;background: rgb(217, 209, 209) !important;position: fixed;left: 1vh; z-index: 1;margin-top: 200px;}
